fixed grid gap

--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -6,6 +6,7 @@ body{
 .grid{
     display:grid;
     grid-template-columns: 1fr 2fr 2fr;
+    grid-gap: 64px;
 }
 .container{
     max-width:1400px;
@@ -25,7 +26,6 @@ header h1{
 font-size: 96px;
 font-weight: 700;
 line-height: 144px;
-letter-spacing: 0em;
 margin:30px 0;
 }
 
@@ -77,7 +77,7 @@ footer p{
     font-size:16px;
     line-height: 24px;
     opacity:0.9;
-    margin-right:20px;
+    
 }
 
 footer ul{
